--- a/portfolio.html
+++ b/portfolio.html
@@ -111,7 +111,7 @@ For that, I built REST APIs with the PHP Lumen framework for the Robot to commun
       </div>
   
       <!-- Prev/Next controls -->
-      <button class="carousel-btn prev">&laquo; Prev</button>
+      <button class="carousel-btn prev">&laquo;&nbsp;Prev</button>
       <button class="carousel-btn next">Next &raquo;</button>
     </div>
     </section>
