--- a/portfolio.html
+++ b/portfolio.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   <title>Portfolio | Ameed Shubietah</title>
 
   <!-- Google Fonts & FontAwesome -->
-  <link rel="preconnect" href="https://fonts.googleapis.com"/>
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap"
     rel="stylesheet"
@@ -20,10 +20,9 @@
   />
 
   <!-- Main stylesheet -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
   <!-- Loader Overlay -->
   <div id="loader">
     <div class="loader-spinner"></div>
@@ -31,7 +30,6 @@
 
   <!-- Page Content for Open-Paper -->
   <div id="page-content">
-    <!-- Navbar -->
     <header>
       <nav class="navbar">
         <div class="brand">Ameed<span>Shubietah</span></div>
@@ -41,155 +39,148 @@
           <span class="bar"></span>
         </div>
         <ul class="nav-list">
-          <li><a href="index.html#home"      class="nav-link">Home</a></li>
-          <li><a href="services.html"        class="nav-link">Services</a></li>
-          <li><a href="skills.html"          class="nav-link">Skills</a></li>
-          <li><a href="portfolio.html"       class="nav-link active">Portfolio</a></li>
-          <li><a href="contact.html"         class="nav-link">Contact</a></li>
+          <li><a href="index.html#home" class="nav-link">Home</a></li>
+          <li><a href="services.html" class="nav-link">Services</a></li>
+          <li><a href="skills.html" class="nav-link">Skills</a></li>
+          <li><a href="portfolio.html" class="nav-link active">Portfolio</a></li>
+          <li><a href="contact.html" class="nav-link">Contact</a></li>
         </ul>
       </nav>
     </header>
 
-      <!-- Portfolio Section -->
-      <section id="portfolio" class="section">
-    <h2 class="section-title">Portfolio</h2>
-    <div class="carousel">
-  
-      <!-- Slide 1 -->
-      <div class="slide active" data-index="1">
-        <div class="slide-info">
-          <div class="project-number">01</div>
-          <div class="project-desc">
-            <h3>Food Delivery</h3>
-            <p>A food delivery platform where I designed the backend Infrastructure and built REST APIs for Android & iOS developers.
+    <section id="portfolio" class="section">
+      <h2 class="section-title">Portfolio</h2>
 
-The APIs are coded in Python/Django with ancillary services built with Node.js for calculating drivers’ routes, resource availability and other realtime updates.
-
-In addition to the APIs, I built the administration panel (you see in the screenshot above) with React & Redux</p>
+      <div class="carousel">
+        <!-- Slide 1 -->
+        <div class="slide active" data-index="0">
+          <div class="slide-info">
+            <div class="project-number">01</div>
+            <div class="project-desc">
+              <h3>Food Delivery</h3>
+              <p>
+                A food delivery platform where I designed the backend Infrastructure and built REST
+                APIs for Android & iOS developers.<br /><br />
+                The APIs are coded in Python/Django with ancillary services built with Node.js for
+                calculating drivers’ routes, resource availability and other realtime updates.<br /><br />
+                In addition to the APIs, I built the administration panel (you see in the screenshot
+                above) with React & Redux.
+              </p>
+            </div>
+          </div>
+          <div class="slide-image">
+            <img
+              src="Images/delivery platform dashboard.jpeg"
+              alt="Food Delivery Dashboard"
+            />
+            <button class="expand-btn">Expand</button>
           </div>
         </div>
-        <div class="slide-image">
-          <img src="Images/delivery platform dashboard.jpeg" alt="Food Delivery Dashboard">
-          <button class="expand-btn">Expand</button>
-        </div>
-      </div>
-  
-      <!-- Slide 2 -->
-      <div class="slide" data-index="2">
-        <div class="slide-info">
-          <div class="project-number">02</div>
-          <div class="project-desc">
-            <h3>Recruitment Platform</h3>
-            <p>A recruitment platform in Dubai (ogram.ae), my role in the team consisted of modelling the database, building load-balanced backend APIs with Express.js & StrongLoop, building realtime notifications with Firebase, crafting tests, building API documentation, user manuals and supporting teammates.
-
-Deployed on Google Compute Engine, utilizing GCP Pub/Sub to build scalable, loosely coupled services.
-
-</p>
+        <!-- Slide 2 -->
+        <div class="slide" data-index="1">
+          <div class="slide-info">
+            <div class="project-number">02</div>
+            <div class="project-desc">
+              <h3>Recruitment Platform</h3>
+              <p>
+                A recruitment platform in Dubai (ogram.ae), my role in the team consisted of modelling
+                the database, building load-balanced backend APIs with Express.js & StrongLoop,
+                building realtime notifications with Firebase, crafting tests, building API
+                documentation, user manuals and supporting teammates.<br /><br />
+                Deployed on Google Compute Engine, utilizing GCP Pub/Sub to build scalable, loosely
+                coupled services.
+              </p>
+            </div>
+          </div>
+          <div class="slide-image">
+            <img
+              src="Images/recruitment platform landing page.jpeg"
+              alt="Recruitment Platform"
+            />
+            <button class="expand-btn">Expand</button>
           </div>
         </div>
-        <div class="slide-image">
-          <img src="Images/recruitment platform landing page.jpeg" alt="Recruitment Platform">
-          <button class="expand-btn">Expand</button>
-        </div>
-      </div>
-  
-      <!-- Slide 3 -->
-      <div class="slide" data-index="3">
-        <div class="slide-info">
-          <div class="project-number">03</div>
-          <div class="project-desc">
-            <h3>Sanbot – API</h3>
-            <p>A local distributor of Sanbot Robotics in Dubai wanted to augment the services of their Android prior to deployment to a few clients in the hospitality industry.
-
-For that, I built REST APIs with the PHP Lumen framework for the Robot to communicate with, and then worked with their team to integrate and test the new features.</p>
+        <!-- Slide 3 -->
+        <div class="slide" data-index="2">
+          <div class="slide-info">
+            <div class="project-number">03</div>
+            <div class="project-desc">
+              <h3>Sanbot – API</h3>
+              <p>
+                A local distributor of Sanbot Robotics in Dubai wanted to augment the services of
+                their Android prior to deployment to a few clients in the hospitality industry.<br /><br />
+                For that, I built REST APIs with the PHP Lumen framework for the Robot to
+                communicate with, and then worked with their team to integrate and test the new
+                features.
+              </p>
+            </div>
+          </div>
+          <div class="slide-image">
+            <img src="Images/sanbot.jpeg" alt="Sanbot API" />
+            <button class="expand-btn">Expand</button>
           </div>
         </div>
-        <div class="slide-image">
-          <img src="Images/sanbot.jpeg" alt="Sanbot API">
-          <button class="expand-btn">Expand</button>
-        </div>
       </div>
-  
-      <!-- Prev/Next controls -->
-      <button class="carousel-btn prev">&laquo;&nbsp;Prev</button>
-      <button class="carousel-btn next">Next &raquo;</button>
-    </div>
+
+      <!-- NEW: arrow-only controls centered below -->
+      <div class="carousel-controls">
+        <button class="ctrl prev"><i class="fas fa-chevron-left"></i></button>
+        <button class="ctrl next"><i class="fas fa-chevron-right"></i></button>
+      </div>
     </section>
-  
-<!-- Lightbox overlay -->
-<div id="lightbox" class="hidden">
-  <button id="lightbox-close">&times;</button>
-  <img id="lightbox-img" src="" alt="Expanded project image">
-</div>
 
+    <!-- Lightbox overlay -->
+    <div id="lightbox" class="hidden">
+      <button id="lightbox-close">&times;</button>
+      <img id="lightbox-img" src="" alt="Expanded project image" />
+    </div>
 
-    <!-- Footer -->
     <footer>
       <p>&copy; 2025 Ameed Shubietah. All rights reserved.</p>
     </footer>
-  </div><!-- /#page-content -->
+  </div>
+  <!-- /#page-content -->
 
-  <!-- Typed.js (if used elsewhere) -->
-  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-  <!-- Main JS (mobile menu, smooth-scroll, scroll-spy, etc.) -->
+  <!-- Main JS -->
   <script src="script.js"></script>
 
-  <!-- Loader → Open-Paper & Fade-In Portfolio -->
+  <!-- Carousel + Lightbox Logic -->
   <script>
-    window.addEventListener('load', () => {
-      setTimeout(() => {
-        document.getElementById('loader').style.display = 'none';
-        document.getElementById('page-content').classList.add('open-paper');
-        document.querySelector('.portfolio-container').classList.add('fade-in');
-      }, 1200);
-    });
     document.addEventListener('DOMContentLoaded', () => {
-  const slides = document.querySelectorAll('.slide');
-  let current = 0;
+      const slides = document.querySelectorAll('.slide');
+      const prevBtn = document.querySelector('.carousel-controls .prev');
+      const nextBtn = document.querySelector('.carousel-controls .next');
+      let current = 0;
 
-  function showSlide(idx) {
-    slides.forEach((s,i) => {
-      s.classList.toggle('active', i === idx);
-    });
-  }
+      function showSlide(idx) {
+        slides.forEach((s, i) => s.classList.toggle('active', i === idx));
+      }
 
-  document.querySelector('.carousel-btn.next')
-    .addEventListener('click', () => {
-      current = (current + 1) % slides.length;
+      nextBtn.addEventListener('click', () => {
+        current = (current + 1) % slides.length;
+        showSlide(current);
+      });
+      prevBtn.addEventListener('click', () => {
+        current = (current - 1 + slides.length) % slides.length;
+        showSlide(current);
+      });
+
+      // lightbox
+      const lightbox = document.getElementById('lightbox');
+      const lightboxImg = document.getElementById('lightbox-img');
+      document.querySelectorAll('.expand-btn').forEach((btn) => {
+        btn.addEventListener('click', (e) => {
+          const src = e.currentTarget.closest('.slide-image').querySelector('img').src;
+          lightboxImg.src = src;
+          lightbox.classList.remove('hidden');
+        });
+      });
+      document.getElementById('lightbox-close').addEventListener('click', () => {
+        lightbox.classList.add('hidden');
+      });
+
       showSlide(current);
     });
-
-  document.querySelector('.carousel-btn.prev')
-    .addEventListener('click', () => {
-      current = (current - 1 + slides.length) % slides.length;
-      showSlide(current);
-    });
-
-  // Expand lightbox
-  const lightbox = document.getElementById('lightbox');
-  const lightboxImg = document.getElementById('lightbox-img');
-  const lbClose = document.getElementById('lightbox-close');
-
-  document.querySelectorAll('.expand-btn').forEach(btn => {
-    btn.addEventListener('click', e => {
-      const imgSrc = e.currentTarget
-                        .closest('.slide-image')
-                        .querySelector('img')
-                        .getAttribute('src');
-      lightboxImg.src = imgSrc;
-      lightbox.classList.remove('hidden');
-      
-    });
-  });
-
-  lbClose.addEventListener('click', () => {
-    lightbox.classList.add('hidden');
-    document.body.style.filter = '';
-  });
-
-  // Initially show first slide
-  showSlide(current);
-});
   </script>
 </body>
 </html>
