--- a/portfolio.html
+++ b/portfolio.html
@@ -99,10 +99,11 @@
           <button class="expand-btn">Expand</button>
         </div>
       </div>
-  
+      <div class="carousel-controls">
+        <button class="carousel-btn prev">&laquo; Prev</button>
+        <button class="carousel-btn next">Next &raquo;</button>
+      </div>
       <!-- Prev/Next controls -->
-      <button class="carousel-btn prev">&laquo; Prev</button>
-      <button class="carousel-btn next">Next &raquo;</button>
     </div>
     </section>
   
