--- a/portfolio.html
+++ b/portfolio.html
@@ -65,7 +65,7 @@
 
 The APIs are coded in Python/Django with ancillary services built with Node.js for calculating drivers’ routes, resource availability and other realtime updates.
 
-In addition to the APIs, I built the administration panel (you see in the screenshot above) with React & Redux.</p>
+In addition to the APIs, I built the administration panel with React & Redux.</p>
           </div>
         </div>
         <div class="slide-image">
