--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,11 @@
           <div class="project-number">01</div>
           <div class="project-desc">
             <h3>Food Delivery</h3>
-            <p>Single-page app with smooth animations.</p>
+            <p>A food delivery platform where I designed the backend Infrastructure and built REST APIs for Android & iOS developers.
+
+The APIs are coded in Python/Django with ancillary services built with Node.js for calculating drivers’ routes, resource availability and other realtime updates.
+
+In addition to the APIs, I built the administration panel with React & Redux.</p>
           </div>
         </div>
         <div class="slide-image">
@@ -76,7 +80,9 @@
           <div class="project-number">02</div>
           <div class="project-desc">
             <h3>Recruitment Platform</h3>
-            <p>Interactive dashboard with charts &amp; graphs.</p>
+            <p>A recruitment platform in Dubai (ogram.ae), my role in the team consisted of modelling the database, building load-balanced backend APIs with Express.js & StrongLoop, building realtime notifications with Firebase, crafting tests, building API documentation, user manuals and supporting teammates.
+
+Deployed on Google Compute Engine, utilizing GCP Pub/Sub to build scalable, loosely coupled services.</p>
           </div>
         </div>
         <div class="slide-image">
@@ -91,7 +97,9 @@
           <div class="project-number">03</div>
           <div class="project-desc">
             <h3>Sanbot – API</h3>
-            <p>E-commerce site with shopping cart.</p>
+            <p>A local distributor of Sanbot Robotics in Dubai wanted to augment the services of their Android prior to deployment to few clients in the hospitality industry.
+
+For that, I built REST APIs with the PHP Lumen framework for the Robot to communicate with, and then worked with their team to integrate and test the new features.</p>
           </div>
         </div>
         <div class="slide-image">
