--- a/portfolio.html
+++ b/portfolio.html
@@ -107,6 +107,25 @@ For that, I built REST APIs with the PHP Lumen framework for the Robot to commun
           <button class="expand-btn">Expand</button>
         </div>
       </div>
+
+       <!-- Slide 4 -->
+      <div class="slide active" data-index="1">
+        <div class="slide-info">
+          <div class="project-number">04</div>
+          <div class="project-desc">
+            <h3>Chery Palestine</h3>
+            <p>A food delivery platform where I designed the backend Infrastructure and built REST APIs for Android & iOS developers.
+
+The APIs are coded in Python/Django with ancillary services built with Node.js for calculating drivers’ routes, resource availability and other realtime updates.
+
+In addition to the APIs, I built the administration panel with React & Redux.</p>
+          </div>
+        </div>
+        <div class="slide-image">
+          <img src="Images/chery.png" alt="Chery Automotive Palestine">
+          <button class="expand-btn">Expand</button>
+        </div>
+      </div>
       
       <!-- Prev/Next controls -->
     </div>
