--- a/portfolio.html
+++ b/portfolio.html
@@ -113,12 +113,8 @@ For that, I built REST APIs with the PHP Lumen framework for the Robot to commun
         <div class="slide-info">
           <div class="project-number">04</div>
           <div class="project-desc">
-            <h3>Chery Palestine</h3>
-            <p>A food delivery platform where I designed the backend Infrastructure and built REST APIs for Android & iOS developers.
-
-The APIs are coded in Python/Django with ancillary services built with Node.js for calculating drivers’ routes, resource availability and other realtime updates.
-
-In addition to the APIs, I built the administration panel with React & Redux.</p>
+            <h3>Palestinian Chery Automotive Website (Full-Stack & Odoo-Integrated)</h3>
+            <p>A fully custom Palestinian-localized rebuild of the official Chery automotive site, featuring responsive UI, multi-location support (including Algeria), and backend APIs built with Node.js and Python/Django. All vehicle inventory, sales orders, and service data sync in real time via RESTful APIs to an Odoo ERP instance.</p>
           </div>
         </div>
         <div class="slide-image">
