--- a/portfolio.html
+++ b/portfolio.html
@@ -122,7 +122,21 @@ For that, I built REST APIs with the PHP Lumen framework for the Robot to commun
           <button class="expand-btn">Expand</button>
         </div>
       </div>
-      
+
+      <!-- Slide 5 -->
+      <div class="slide active" data-index="1">
+        <div class="slide-info">
+          <div class="project-number">05</div>
+          <div class="project-desc">
+            <h3>Battery Saudi (Full-Stack & Odoo-Integrated)</h3>
+            <p>Built a custom, responsive website from scratch with HTML, CSS, and JavaScript for a Saudi Arabian car company. Integrated multiple APIs for real-time syncing with Odoo, enabling seamless CRM and sales management directly through the site.</p>
+          </div>
+        </div>
+        <div class="slide-image">
+          <img src="Images/battery-saudi.png" alt="Chery Automotive Palestine">
+          <button class="expand-btn">Expand</button>
+        </div>
+      </div>
       <!-- Prev/Next controls -->
     </div>
     <div class="carousel-controls">
