--- a/index.html
+++ b/index.html
@@ -97,6 +97,17 @@
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   <!-- Main JS -->
   <script src="script.js"></script>
-
+<script>
+    window.addEventListener('load', () => {
+      setTimeout(() => {
+        // hide loader
+        document.getElementById('loader').style.display = 'none';
+        // open-paper animation
+        document.getElementById('page-content').classList.add('open-paper');
+        // fade in the services cards
+        document.querySelector('.services-container').classList.add('fade-in');
+      }, 1200);
+    });
+  </script>
 </body>
 </html>
