--- a/services.html
+++ b/services.html
@@ -73,21 +73,21 @@
           <i class="fas fa-arrow-right arrow"></i>
         </div>
         <div class="service">
-          <i class="fas fa-chart-line"></i>
-          <h3>Data Analytics</h3>
-          <p>Insightful dashboards to make data-driven decisions.</p>
+          <i class="fas fa-database"></i>
+          <h3>ERP Services</h3>
+          <p>Custom Odoo modules, live analytics dashboards, and automated workflows that unite finance, inventory, and CRM in one place.</p>
           <i class="fas fa-arrow-right arrow"></i>
         </div>
         <div class="service">
-          <i class="fas fa-mobile-alt"></i>
-          <h3>Mobile Apps</h3>
-          <p>Performance-driven apps for iOS and Android platforms.</p>
+          <i class="fas fa-lightbulb"></i>
+          <h3>Problems Solving</h3>
+          <p>Full-stack troubleshooting and optimisation—pinpointing bottlenecks, refactoring code, and boosting web & mobile performance.</p>
           <i class="fas fa-arrow-right arrow"></i>
         </div>
         <div class="service">
-          <i class="fas fa-cloud"></i>
-          <h3>Cloud Solutions</h3>
-          <p>Scalable hosting and serverless infrastructures.</p>
+          <i class="fas fa-video"></i>
+          <h3>Video Editing</h3>
+          <p>Professional editing, motion graphics, and colour grading delivered in 4K—tailored for YouTube, social media, and broadcast.</p>
           <i class="fas fa-arrow-right arrow"></i>
         </div>
       </div>
