--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="hero-cta">
     <a href="cv.pdf" class="btn" id="downloadCv">Download CV</a>
         <div class="social-icons">
-    <a href="https://discord.gg/aM4Uadz9" target="_blank" aria-label="Discord">
+    <a href="https://discord.gg/naPQvUsX" target="_blank" aria-label="Discord">
       <i class="fab fa-discord"></i>
     </a>
     <a href="https://wa.me/972595820527" target="_blank" aria-label="WhatsApp">
