--- a/contact.html
+++ b/contact.html
@@ -49,52 +49,32 @@
     </header>
 
     <!-- Contact Section -->
-    <section id="contact" class="section">
-  <h2 class="section-title">Contact Me</h2>
-  <div class="contact-card">
-    <form
-  action="https://formsubmit.co/ameedraqish@gmail.com"
-  method="POST"
-  class="contact-form"
->
-  <!-- disable their captcha “are you human?” page -->
-  <input type="hidden" name="_captcha" value="false">
+     <section id="contact" class="section">
+    <h2 class="section-title">Contact Me</h2>
 
-  <!-- optional: set a custom email subject -->
-  <input type="hidden" name="_subject" value="New message from my portfolio site">
+    <form action="https://YOUR-BACKEND-URL/api/contact" method="POST" class="contact-form">
+      <div class="form-group">
+        <label for="name">Your Name</label>
+        <input id="name" name="name" type="text" placeholder="Ameed Shubietah" required />
+      </div>
 
-  <!-- optional: redirect to a “thank you” page after sending -->
-<!-- <input type="hidden" name="_next" value="https://yourdomain.com/thank-you.html"> -->
+      <div class="form-group">
+        <label for="email">Your Email</label>
+        <input id="email" name="email" type="email" placeholder="you@example.com" required />
+      </div>
 
-  <div class="form-group">
-    <label for="name">Your Name</label>
-    <input id="name" type="text" name="name" placeholder="Your Name" required>
-  </div>
+      <div class="form-group">
+        <label for="message">Your Message</label>
+        <textarea id="message" name="message" rows="5" placeholder="How can I help you?" required></textarea>
+      </div>
 
-  <div class="form-group">
-    <label for="email">Your Email</label>
-    <input id="email" type="email" name="email" placeholder="you@example.com" required>
-  </div>
-
-  <div class="form-group">
-    <label for="message">Your Message</label>
-    <textarea id="message" name="message" placeholder="How can I help you?" rows="5" required></textarea>
-  </div>
-
-  <button type="submit" class="btn btn-primary">Send Message</button>
-    <span class="or-text">OR</span>
-    <a
-      href="https://wa.me/972595820527"
-      target="_blank"
-      rel="noopener"
-      class="btn btn-whatsapp"
-    >
-      Contact me WhatsApp
-    </a>
-</form>
-
-  </div>
-</section>
+      <button type="submit" class="btn btn-primary">Send Message</button>
+      <span class="or-text">OR</span>
+      <a href="https://wa.me/972595820527" rel="noopener" target="_blank" class="btn btn-whatsapp">
+        Contact me on WhatsApp
+      </a>
+    </form>
+  </section>
 
     <!-- Footer -->
     <footer>
