--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
     <form action="https://YOUR-BACKEND-URL/api/contact" method="POST" class="contact-form">
       <div class="form-group">
         <label for="name">Your Name</label>
-        <input id="name" name="name" type="text" placeholder="Ameed Shubietah" required />
+        <input id="name" name="name" type="text" placeholder="Your Name" required />
       </div>
 
       <div class="form-group">
