--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
   <input type="hidden" name="_subject" value="New message from my portfolio site">
 
   <!-- optional: redirect to a “thank you” page after sending -->
-  <!-- <input type="hidden" name="_next" value="https://yourdomain.com/thank-you.html"> -->
+  <input type="hidden" name="_next" value="thank-you.html"> 
 
   <div class="form-group">
     <label for="name">Your Name</label>
