--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
 
   <div class="form-group">
     <label for="name">Your Name</label>
-    <input id="name" type="text" name="name" placeholder="Ameed Shubietah" required>
+    <input id="name" type="text" name="name" placeholder="Your Name" required>
   </div>
 
   <div class="form-group">
