--- a/portfolio.html
+++ b/portfolio.html
@@ -61,11 +61,7 @@
           <div class="project-number">01</div>
           <div class="project-desc">
             <h3>Food Delivery</h3>
-            <p>A food delivery platform where I designed the backend Infrastructure and built REST APIs for Android & iOS developers.
-
-The APIs are coded in Python/Django with ancillary services built with Node.js for calculating drivers’ routes, resource availability and other realtime updates.
-
-In addition to the APIs, I built the administration panel with React & Redux.</p>
+            <p>Food-delivery platform where I engineered the backend and RESTful APIs (Python / Django) for the Android and iOS apps, with auxiliary Node.js micro-services handling driver-routing, capacity checks, and other real-time tasks. Internal admin functions are delivered through a fully customized Odoo CRM backend.</p>
           </div>
         </div>
         <div class="slide-image">
@@ -80,9 +76,7 @@ In addition to the APIs, I built the administration panel with React & Redux.</p
           <div class="project-number">02</div>
           <div class="project-desc">
             <h3>Recruitment Platform</h3>
-            <p>A recruitment platform in Dubai (ogram.ae), my role in the team consisted of modelling the database, building load-balanced backend APIs with Express.js & StrongLoop, building realtime notifications with Firebase, crafting tests, building API documentation, user manuals and supporting teammates.
-
-Deployed on Google Compute Engine, utilizing GCP Pub/Sub to build scalable, loosely coupled services.</p>
+            <p>A recruitment platform in Dubai (ogram.ae) where I contributed to designing the data model and building scalable, load-balanced backend APIs using Express.js and StrongLoop. I implemented real-time notifications with Firebase, developed test coverage, API documentation, and user manuals. The platform was deployed on Google Compute Engine, utilizing GCP Pub/Sub for loosely coupled service communication. Internally, I integrated and customized Odoo’s CRM and Recruitment modules to streamline client relationship management and automate candidate tracking across the hiring pipeline.</p>
           </div>
         </div>
         <div class="slide-image">
@@ -91,24 +85,8 @@ Deployed on Google Compute Engine, utilizing GCP Pub/Sub to build scalable, loos
         </div>
       </div>
   
-      <!-- Slide 3 -->
-      <div class="slide" data-index="3">
-        <div class="slide-info">
-          <div class="project-number">03</div>
-          <div class="project-desc">
-            <h3>Sanbot – API</h3>
-            <p>A local distributor of Sanbot Robotics in Dubai wanted to augment the services of their Android prior to deployment to few clients in the hospitality industry.
-
-For that, I built REST APIs with the PHP Lumen framework for the Robot to communicate with, and then worked with their team to integrate and test the new features.</p>
-          </div>
-        </div>
-        <div class="slide-image">
-          <img src="Images/sanbot.jpeg" alt="Sanbot API">
-          <button class="expand-btn">Expand</button>
-        </div>
-      </div>
-
-       <!-- Slide 4 -->
+    
+       <!-- Slide 3 -->
       <div class="slide active" data-index="1">
         <div class="slide-info">
           <div class="project-number">04</div>
@@ -123,7 +101,7 @@ For that, I built REST APIs with the PHP Lumen framework for the Robot to commun
         </div>
       </div>
 
-      <!-- Slide 5 -->
+      <!-- Slide 4 -->
       <div class="slide active" data-index="1">
         <div class="slide-info">
           <div class="project-number">05</div>
@@ -137,6 +115,22 @@ For that, I built REST APIs with the PHP Lumen framework for the Robot to commun
           <button class="expand-btn">Expand</button>
         </div>
       </div>
+
+      <!-- Slide 5 -->
+      <div class="slide" data-index="3">
+        <div class="slide-info">
+          <div class="project-number">03</div>
+          <div class="project-desc">
+            <h3>Sanbot – API</h3>
+            <p>A local distributor of Sanbot Robotics in Dubai wanted to augment the services of their Android prior to deployment to few clients in the hospitality industry. For that, I built REST APIs using Python for the Robot to communicate with, and then worked with their team to integrate and test the new features.</p>
+          </div>
+        </div>
+        <div class="slide-image">
+          <img src="Images/sanbot.jpeg" alt="Sanbot API">
+          <button class="expand-btn">Expand</button>
+        </div>
+      </div>
+      
       <!-- Prev/Next controls -->
     </div>
     <div class="carousel-controls">
