--- a/services.html
+++ b/services.html
@@ -80,7 +80,7 @@
         </div>
         <div class="service">
           <i class="fas fa-lightbulb"></i>
-          <h3>Problems Solving</h3>
+          <h3>Problem Solving</h3>
           <p>Full-stack troubleshooting and optimisation—pinpointing bottlenecks, refactoring code, and boosting web & mobile performance.</p>
           <i class="fas fa-arrow-right arrow"></i>
         </div>
